# ai-mini-labs

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
00-setup/: .env.example  README.md
01-local-llm-cli/: .env.example  README.md  requirements.txt
01-local-llm-cli/artifacts/: run_20260220_220433.json
01-local-llm-cli/src/: cli.py  model.py
01-local-llm-cli/src/local_llm_cli/: cli.py  infer.py
01-local-llm-cli/tests/: test_model.py
02-hf-embeddings-similarity/: .env.example  README.md  requirements.txt
02-hf-embeddings-similarity/data/: notes.json
02-hf-embeddings-similarity/src/: embedder.py  search.py
02-hf-embeddings-similarity/tests/: test_embeddings.py
shared/ai_labs_common/: config.py
