[project]
name = "ai-mini-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]  # import sorting

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # let black handle line length

[tool.black]
line-length = 100
target-version = ["py311"]
